--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="colorProgressBackgroud">#444444</color>
     <color name="colorProgressBar">#555555</color>
     <color name="colorgreyBg">#f41b2730</color>
+    <color name="colorgreyBgtrans">#7c1b2730</color>
     <color name="tileTransBlack">#d6000000</color>
 
     <color name="transBlack">#d80d0707</color>
@@ -18,6 +19,7 @@
     <color name="blue_one">#0088cc</color>
     <color name="blue_two">#0088cc</color>
     <color name="testGreen">#8cc1c5</color>
+    <color name="testGreentrans">#c28cc1c5</color>
     <color name="test_dark">#003366</color>
     <color name="colorRed">#aa3311</color>
 </resources>
