--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -17,7 +17,10 @@
 
 
     <dimen name="medium_font_size">14sp</dimen>
+    <dimen name="medium_plus_font_size">17sp</dimen>
     <dimen name="large_font_size">20sp</dimen>
+    <dimen name="xlarge_font_size">37sp</dimen>
+    <dimen name="profLabelPadding">9dp</dimen>
 
     <dimen name="grid_vertical_padding">1dp</dimen>
     <dimen name="grid_horizontal_padding">2dp</dimen>
