--- a/app/src/main/res/layout/home_tile_item.xml
+++ b/app/src/main/res/layout/home_tile_item.xml
@@ -13,12 +13,27 @@
               android:paddingTop="7dp"
               android:onClick="onViewClickedEvent">
 
-    <ImageView
-        android:id="@+id/imgHomeTile"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_gravity="center"
-        app:srcCompat="@drawable/gridlayout_icon"/>
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:id="@+id/imgHomeTile"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:layout_gravity="center"
+            app:srcCompat="@drawable/gridlayout_icon"/>
+
+        <ImageView
+            android:id="@+id/imageView3"
+            android:layout_width="wrap_content"
+            android:layout_height="32dp"
+            android:layout_gravity="right"
+            android:layout_marginEnd="-11dp"
+            android:layout_marginTop="10dp"
+            android:scaleType="fitEnd"
+            app:srcCompat="@mipmap/more_icon"/>
+    </FrameLayout>
 
     <TextView
         android:id="@+id/txtHomeTile"
