--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -27,153 +27,202 @@
 
                 <FrameLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    >
+                    android:layout_height="wrap_content">
 
-                    <FrameLayout
-                        android:id="@+id/frmProfPicContainer"
-                        android:layout_width="160dp"
-                        android:layout_height="160dp"
-                        android:layout_gravity="center_horizontal"
-                        android:layout_marginRight="60dp"
-                        android:background="@android:color/transparent">
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginLeft="20dp">
 
-                        <!--    <ImageView
+                        <FrameLayout
+                            android:id="@+id/frmProfPicContainer"
+                            android:layout_width="140dp"
+                            android:layout_height="140dp"
+                            android:layout_alignParentLeft="true"
+                            android:background="@android:color/transparent">
+
+                            <!--    <ImageView
                             android:id="@+id/imageView3"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:background="@drawable/img"
                             /> -->
 
-                        <android.support.v7.widget.CardView
-                            android:id="@+id/view2"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_centerHorizontal="true"
-                            android:elevation="12dp"
-                            android:innerRadius="0dp"
-                            android:shape="ring"
-                            android:thicknessRatio="1.9"
-                            app:cardBackgroundColor="@android:color/holo_green_dark"
-                            app:cardCornerRadius="80dp">
-
-                            <ImageView
-                                android:id="@+id/imageView1"
+                            <android.support.v7.widget.CardView
+                                android:id="@+id/view2"
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
-                                android:layout_alignParentTop="true"
                                 android:layout_centerHorizontal="true"
-                                android:src="@drawable/profpic">
-                            </ImageView>
+                                android:elevation="12dp"
+                                android:innerRadius="0dp"
+                                android:shape="ring"
+                                android:thicknessRatio="1.9"
+                                app:cardBackgroundColor="@android:color/holo_green_dark"
+                                app:cardCornerRadius="70dp">
 
-                            <ImageButton
-                                android:id="@+id/imgBtnuploadImage"
-                                android:layout_width="40dp"
-                                android:layout_height="40dp"
-                                android:layout_gravity="center"
-                                android:background="@drawable/white_upload_circle"
-                                android:onClick="onViewClickedEvent"
-                                android:visibility="gone"
-                                app:srcCompat="@android:drawable/ic_menu_upload"/>
-                        </android.support.v7.widget.CardView>
+                                <ImageView
+                                    android:id="@+id/imageView1"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent"
+                                    android:layout_alignParentTop="true"
+                                    android:layout_centerHorizontal="true"
+                                    android:src="@drawable/profpic">
+                                </ImageView>
+
+                                <ImageButton
+                                    android:id="@+id/imgBtnuploadImage"
+                                    android:layout_width="40dp"
+                                    android:layout_height="40dp"
+                                    android:layout_gravity="center"
+                                    android:background="@drawable/white_upload_circle"
+                                    android:onClick="onViewClickedEvent"
+                                    android:visibility="gone"
+                                    app:srcCompat="@android:drawable/ic_menu_upload"/>
+                            </android.support.v7.widget.CardView>
 
 
-                    </FrameLayout>
+                        </FrameLayout>
 
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_marginLeft="75dp"
-                        android:layout_marginTop="-50dp"
-                        android:background="@android:color/transparent"
-                        android:orientation="vertical">
-
-                        <TextView
-                            android:id="@+id/textView"
-                            android:layout_width="wrap_content"
+                        <LinearLayout
+                            android:id="@+id/lnrUserInfo"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_gravity="start"
-                            android:text="Username"
-                            android:textColor="@color/testGreen"
-                            android:textSize="20sp"/>
+                            android:layout_gravity="center"
+                            android:layout_marginEnd="30dp"
+                            android:layout_marginRight="30dp"
+                            android:layout_toEndOf="@+id/frmProfPicContainer"
+                            android:layout_toRightOf="@+id/frmProfPicContainer"
+                            android:background="@android:color/transparent"
+                            android:orientation="vertical"
+                            android:paddingEnd="10dp"
+                            android:paddingLeft="10dp"
+                            android:paddingRight="10dp"
+                            android:paddingStart="10dp">
 
-                        <TextView
-                            android:id="@+id/textViewx"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="start"
-                            android:gravity="start"
-                            android:text="Province"
-                            android:textColor="@color/textWhite"
-                            android:textSize="15sp"/>
+                            <TextView
+                                android:id="@+id/txtUserName"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="start"
+                                android:text="Username if it is very long"
+                                android:textColor="@color/testGreen"
+                                android:textSize="20sp"/>
 
-                    </LinearLayout>
+                            <TextView
+                                android:id="@+id/txtMemberType"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="start"
+                                android:gravity="start"
+                                android:text="Silver member"
+                                android:textColor="@color/textWhite"
+                                android:textSize="15sp"/>
+
+                            <TextView
+                                android:id="@+id/txtCity"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="start"
+                                android:gravity="start"
+                                android:text="City"
+                                android:textColor="@color/textWhite"
+                                android:textSize="15sp"/>
+
+                        </LinearLayout>
+
+                        <ImageView
+                            android:id="@+id/imgMore"
+                            android:layout_width="30dp"
+                            android:layout_height="32dp"
+                            android:layout_alignParentRight="true"
+                            android:layout_marginRight="10dp"
+                            android:layout_marginTop="10dp"
+                            android:layout_weight="1"
+                            android:onClick="onViewClickedEvent"
+                            android:scaleType="fitCenter"
+                            app:srcCompat="@mipmap/more_icon"/>
+                    </RelativeLayout>
 
                 </FrameLayout>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center_horizontal"
+                <FrameLayout
+                    android:layout_width="336dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
                     android:orientation="horizontal">
 
                     <LinearLayout
+                        android:id="@+id/lnrViewPoints"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
+                        android:layout_gravity="start"
+                        android:onClick="onViewClickedEvent"
                         android:orientation="vertical">
 
-                        <TextView style="@style/profileLabel1Count"
-                                    android:id="@+id/textView1"
-                                    android:text="10" />
+                        <TextView
+                            android:id="@+id/textView1"
+                            style="@style/profileLabel1Count"
+                            android:text="10"/>
 
-                        <TextView style="@style/profileLabel1"
-                                    android:id="@+id/textView1a"
-                                    android:text="@string/points" />
+                        <TextView
+                            android:id="@+id/textView1a"
+                            style="@style/profileLabel1"
+                            android:text="@string/points"/>
 
-                        <FrameLayout style="@style/profUnderLiner" />
+                        <FrameLayout style="@style/profUnderLiner"/>
 
                     </LinearLayout>
 
                     <LinearLayout
+                        android:id="@+id/lnrViewMessages"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
+                        android:layout_gravity="center_horizontal"
                         android:layout_marginEnd="60dp"
                         android:layout_marginLeft="60dp"
                         android:layout_marginRight="60dp"
                         android:layout_marginStart="60dp"
+                        android:onClick="onViewClickedEvent"
                         android:orientation="vertical">
 
-                        <TextView style="@style/profileLabel1Count"
-                                  android:id="@+id/textView2"
-                                  android:text="3" />
+                        <TextView
+                            android:id="@+id/textView2"
+                            style="@style/profileLabel1Count"
+                            android:text="3"/>
 
-                        <TextView style="@style/profileLabel1"
-                                  android:id="@+id/textView2a"
-                                  android:text="@string/messages" />
+                        <TextView
+                            android:id="@+id/textView2a"
+                            style="@style/profileLabel1"
+                            android:text="@string/messages"/>
 
-                        <FrameLayout style="@style/profUnderLiner" />
+                        <FrameLayout style="@style/profUnderLiner"/>
 
                     </LinearLayout>
 
                     <LinearLayout
+                        android:id="@+id/lnrViewCars"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
+                        android:layout_gravity="end"
+                        android:onClick="onViewClickedEvent"
                         android:orientation="vertical">
 
-                        <TextView style="@style/profileLabel1Count"
-                                  android:id="@+id/textView3"
-                                  android:text="1" />
+                        <TextView
+                            android:id="@+id/textView3"
+                            style="@style/profileLabel1Count"
+                            android:text="1"/>
 
-                        <TextView style="@style/profileLabel1"
-                                  android:id="@+id/textView3a"
-                                  android:text="@string/cars" />
+                        <TextView
+                            android:id="@+id/textView3a"
+                            style="@style/profileLabel1"
+                            android:text="@string/cars"/>
 
-                        <FrameLayout style="@style/profUnderLiner" />
+                        <FrameLayout style="@style/profUnderLiner"/>
 
                     </LinearLayout>
 
-                </LinearLayout>
+                </FrameLayout>
 
             </LinearLayout>
 
@@ -230,43 +279,44 @@
                     android:paddingStart="10dp"
                     android:paddingTop="0dp">
 
-                    <RelativeLayout
+                    <RelativeLayout android:id="@+id/rltvAddnewCar"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:paddingEnd="15dp"
                         android:paddingLeft="15dp"
                         android:paddingRight="15dp"
-                        android:paddingStart="15dp">
+                        android:paddingStart="15dp"
+                        android:onClick="onViewClickedEvent">
 
                         <TextView
                             android:id="@+id/textView4"
                             style="@style/profileLabel2"
                             android:text="Add a new car to your profile "/>
 
-                        <ImageButton
+                        <ImageView
                             android:id="@+id/imgAddicon"
                             android:layout_width="40dp"
                             android:layout_height="40dp"
                             android:layout_alignParentRight="true"
                             android:layout_centerInParent="true"
                             android:layout_gravity="center"
-                            android:layout_weight="1"
                             android:background="@android:color/transparent"
                             android:scaleType="fitXY"
-                            app:srcCompat="@android:drawable/ic_menu_add"/>
+                            app:srcCompat="@android:drawable/ic_menu_add" />
 
                     </RelativeLayout>
 
                     <FrameLayout style="@style/profileDividerLine"/>
 
 
-                    <RelativeLayout
+                    <RelativeLayout android:id="@+id/rltvbookAService"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:paddingEnd="15dp"
                         android:paddingLeft="15dp"
                         android:paddingRight="15dp"
-                        android:paddingStart="15dp">
+                        android:paddingStart="15dp"
+                        android:onClick="onViewClickedEvent">
 
                         <TextView
                             android:id="@+id/textV4"
@@ -274,7 +324,7 @@
                             android:layout_toLeftOf="@+id/imgAddicon2"
                             android:text="Book a service"/>
 
-                        <ImageButton
+                        <ImageView
                             android:id="@+id/imgAddicon2"
                             android:layout_width="40dp"
                             android:layout_height="40dp"
@@ -282,7 +332,6 @@
                             android:layout_alignParentRight="true"
                             android:layout_centerVertical="true"
                             android:layout_gravity="center"
-                            android:layout_weight="1"
                             android:background="@android:color/transparent"
                             android:scaleType="fitXY"
                             app:srcCompat="@android:drawable/ic_menu_recent_history"/>
@@ -292,13 +341,14 @@
                     <FrameLayout style="@style/profileDividerLine"/>
 
 
-                    <RelativeLayout
+                    <RelativeLayout android:id="@+id/rltvAskAquestion"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:paddingEnd="15dp"
                         android:paddingLeft="15dp"
                         android:paddingRight="15dp"
-                        android:paddingStart="15dp">
+                        android:paddingStart="15dp"
+                        android:onClick="onViewClickedEvent">
 
                         <TextView
                             android:id="@+id/textV5"
@@ -306,14 +356,13 @@
                             android:layout_toLeftOf="@+id/imgAddicon3"
                             android:text="@string/ask_geartronix_a_question"/>
 
-                        <ImageButton
+                        <ImageView
                             android:id="@+id/imgAddicon3"
                             android:layout_width="40dp"
                             android:layout_height="40dp"
                             android:layout_alignParentRight="true"
                             android:layout_centerInParent="true"
                             android:layout_gravity="center"
-                            android:layout_weight="1"
                             android:background="@android:color/transparent"
                             android:scaleType="fitXY"
                             app:srcCompat="@android:drawable/ic_menu_info_details"/>
