--- a/app/src/main/res/layout/home_tile_item.xml
+++ b/app/src/main/res/layout/home_tile_item.xml
@@ -30,9 +30,11 @@
             android:layout_height="32dp"
             android:layout_gravity="right"
             android:layout_marginEnd="-11dp"
+            android:layout_marginRight="-11dp"
             android:layout_marginTop="10dp"
             android:scaleType="fitEnd"
             app:srcCompat="@mipmap/more_icon"/>
+
     </FrameLayout>
 
     <TextView
