--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -26,6 +26,33 @@
         <item name="android:textSize">@dimen/medium_font_size</item>
     </style>
 
+    <style name="profileBarInfo1" parent="geartronixLabel">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">#666666</item>
+        <item name="android:textSize">16dp</item>
+        <item name="android:layout_margin">0dp</item>
+    </style>
+
+    <style name="profileBarInfo2" parent="profileBarInfo1">
+        <item name="android:textColor">@color/textWhite</item>
+        <item name="android:textSize">12dp</item>
+    </style>
+
+    <style name="profileBarContainer">
+        <item name="android:layout_width">110dp</item>
+        <item name="android:layout_height">110dp</item>
+    </style>
+
+    <style name="profileBarSubContainer">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:layout_marginTop">5dp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:orientation">vertical</item>
+    </style>
+
     <style name="largeLabel" parent="geartronixLabel">
         <item name="android:textSize">@dimen/large_font_size</item>
     </style>
