--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -105,7 +105,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="start"
-                                android:text="Username if it is very long"
+                                android:text="Username"
                                 android:textColor="@color/testGreen"
                                 android:textSize="20sp"/>
 
@@ -147,7 +147,7 @@
                 </FrameLayout>
 
                 <FrameLayout
-                    android:layout_width="336dp"
+                    android:layout_width="320dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:orientation="horizontal">
