--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -4,6 +4,11 @@
     <group android:checkableBehavior="single">
 
         <item
+            android:id="@+id/action_home"
+            android:icon="@mipmap/home_icon"
+            android:title="Home"/>
+
+        <item
             android:id="@+id/action_profile"
             android:icon="@mipmap/profile_icon"
             android:title="View your profile"/>
