--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -58,16 +58,18 @@
                                 android:innerRadius="0dp"
                                 android:shape="ring"
                                 android:thicknessRatio="1.9"
-                                app:cardBackgroundColor="@android:color/holo_green_dark"
+                                app:cardBackgroundColor="@color/transBlack"
                                 app:cardCornerRadius="70dp">
 
                                 <ImageView
-                                    android:id="@+id/imageView1"
+                                    android:id="@+id/imgProfpic"
                                     android:layout_width="match_parent"
                                     android:layout_height="match_parent"
                                     android:layout_alignParentTop="true"
                                     android:layout_centerHorizontal="true"
-                                    android:src="@drawable/profpic">
+                                    android:scaleType="fitXY"
+                                    app:srcCompat="@mipmap/user_icon"
+                                    android:onClick="onViewClickedEvent">
                                 </ImageView>
 
                                 <ImageButton
@@ -137,7 +139,7 @@
                             android:layout_height="32dp"
                             android:layout_alignParentRight="true"
                             android:layout_marginRight="10dp"
-                            android:layout_marginTop="10dp"
+                            android:layout_marginTop="3dp"
                             android:layout_weight="1"
                             android:onClick="onViewClickedEvent"
                             android:scaleType="fitCenter"
@@ -161,9 +163,9 @@
                         android:orientation="vertical">
 
                         <TextView
-                            android:id="@+id/textView1"
+                            android:id="@+id/txtPointsCount"
                             style="@style/profileLabel1Count"
-                            android:text="10"/>
+                            android:text="0"/>
 
                         <TextView
                             android:id="@+id/textView1a"
@@ -187,9 +189,9 @@
                         android:orientation="vertical">
 
                         <TextView
-                            android:id="@+id/textView2"
+                            android:id="@+id/txtMessageCount"
                             style="@style/profileLabel1Count"
-                            android:text="3"/>
+                            android:text="0"/>
 
                         <TextView
                             android:id="@+id/textView2a"
@@ -209,9 +211,9 @@
                         android:orientation="vertical">
 
                         <TextView
-                            android:id="@+id/textView3"
+                            android:id="@+id/txtCarsCount"
                             style="@style/profileLabel1Count"
-                            android:text="1"/>
+                            android:text="0"/>
 
                         <TextView
                             android:id="@+id/textView3a"
@@ -233,7 +235,7 @@
                 android:background="@color/colorgreyBg"
                 android:gravity="top"
                 android:orientation="vertical"
-                android:paddingBottom="100dp"
+                android:paddingBottom="50dp"
                 android:paddingEnd="10dp"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
@@ -248,7 +250,8 @@
                     android:gravity="center_horizontal"
                     android:orientation="horizontal">
 
-                    <FrameLayout  style="@style/profileBarContainer"
+                    <FrameLayout
+                        style="@style/profileBarContainer"
                         android:layout_marginRight="30dp">
 
 
@@ -258,7 +261,8 @@
                             android:layout_height="match_parent"
                             android:max="100"
                             android:progress="100"
-                            android:progressDrawable="@drawable/circular_progressbar_track" />
+                            android:progressDrawable="@drawable/circular_progressbar_track"/>
+
                         <ProgressBar
                             android:id="@+id/progressBar1"
                             style="?android:attr/progressBarStyleHorizontal"
@@ -266,23 +270,25 @@
                             android:layout_height="match_parent"
                             android:max="100"
                             android:progress="0"
-                            android:progressDrawable="@drawable/circular_progressbar_progress" />
+                            android:progressDrawable="@drawable/circular_progressbar_progress"/>
 
                         <LinearLayout style="@style/profileBarSubContainer">
 
-                            <TextView style="@style/profileBarInfo1"
+                            <TextView
                                 android:id="@+id/txtBarInfo1"
+                                style="@style/profileBarInfo1"
                                 android:text="0,000"/>
 
-                            <TextView style="@style/profileBarInfo2"
+                            <TextView
                                 android:id="@+id/txtBarInfo2"
+                                style="@style/profileBarInfo2"
                                 android:text="0,00"/>
 
                         </LinearLayout>
 
                     </FrameLayout>
 
-                    <FrameLayout  style="@style/profileBarContainer">
+                    <FrameLayout style="@style/profileBarContainer">
 
                         <ProgressBar
                             style="?android:attr/progressBarStyleHorizontal"
@@ -290,7 +296,8 @@
                             android:layout_height="match_parent"
                             android:max="100"
                             android:progress="100"
-                            android:progressDrawable="@drawable/circular_progressbar_track" />
+                            android:progressDrawable="@drawable/circular_progressbar_track"/>
+
                         <ProgressBar
                             android:id="@+id/progressBar2"
                             style="?android:attr/progressBarStyleHorizontal"
@@ -298,24 +305,23 @@
                             android:layout_height="match_parent"
                             android:max="100"
                             android:progress="0"
-                            android:progressDrawable="@drawable/circular_progressbar_progress" />
+                            android:progressDrawable="@drawable/circular_progressbar_progress"/>
 
                         <LinearLayout style="@style/profileBarSubContainer">
 
-                            <TextView style="@style/profileBarInfo1"
-                                      android:id="@+id/txtBarInfo1b"
-                                      android:text="0,000"/>
+                            <TextView
+                                android:id="@+id/txtBarInfo1b"
+                                style="@style/profileBarInfo1"
+                                android:text="0,000"/>
 
-                            <TextView style="@style/profileBarInfo2"
-                                      android:id="@+id/txtBarInfo2b"
-                                      android:text="0,00"/>
+                            <TextView
+                                android:id="@+id/txtBarInfo2b"
+                                style="@style/profileBarInfo2"
+                                android:text="0,00"/>
 
                         </LinearLayout>
 
                     </FrameLayout>
-
-
-
 
 
                 </LinearLayout>
@@ -334,14 +340,15 @@
                     android:paddingStart="10dp"
                     android:paddingTop="0dp">
 
-                    <RelativeLayout android:id="@+id/rltvAddnewCar"
+                    <RelativeLayout
+                        android:id="@+id/rltvAddnewCar"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:onClick="onViewClickedEvent"
                         android:paddingEnd="15dp"
                         android:paddingLeft="15dp"
                         android:paddingRight="15dp"
-                        android:paddingStart="15dp"
-                        android:onClick="onViewClickedEvent">
+                        android:paddingStart="15dp">
 
                         <TextView
                             android:id="@+id/textView4"
@@ -357,21 +364,22 @@
                             android:layout_gravity="center"
                             android:background="@android:color/transparent"
                             android:scaleType="fitXY"
-                            app:srcCompat="@android:drawable/ic_menu_add" />
+                            app:srcCompat="@android:drawable/ic_menu_add"/>
 
                     </RelativeLayout>
 
                     <FrameLayout style="@style/profileDividerLine"/>
 
 
-                    <RelativeLayout android:id="@+id/rltvbookAService"
+                    <RelativeLayout
+                        android:id="@+id/rltvbookAService"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:onClick="onViewClickedEvent"
                         android:paddingEnd="15dp"
                         android:paddingLeft="15dp"
                         android:paddingRight="15dp"
-                        android:paddingStart="15dp"
-                        android:onClick="onViewClickedEvent">
+                        android:paddingStart="15dp">
 
                         <TextView
                             android:id="@+id/textV4"
@@ -396,14 +404,15 @@
                     <FrameLayout style="@style/profileDividerLine"/>
 
 
-                    <RelativeLayout android:id="@+id/rltvAskAquestion"
+                    <RelativeLayout
+                        android:id="@+id/rltvAskAquestion"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:onClick="onViewClickedEvent"
                         android:paddingEnd="15dp"
                         android:paddingLeft="15dp"
                         android:paddingRight="15dp"
-                        android:paddingStart="15dp"
-                        android:onClick="onViewClickedEvent">
+                        android:paddingStart="15dp">
 
                         <TextView
                             android:id="@+id/textV5"
@@ -435,5 +444,72 @@
         </LinearLayout>
     </ScrollView>
 
+
+    <!-- Todo: Create custom view -->
+    <co.za.geartronix.customViews.CustomImageVIew
+        android:id="@+id/imgLarge"
+        android:background="@color/colorTransparentBlack"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:scaleType="matrix"
+        android:visibility="gone"
+        android:animateLayoutChanges="true"
+        android:clickable="true"
+        app:srcCompat="@android:drawable/ic_menu_share"/>
+
+    <FrameLayout
+        android:id="@+id/frmContrlMenu"
+        android:visibility="gone"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:animateLayoutChanges="true"
+        android:background="@color/colorTransparentBlack">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="10dp"
+            android:layout_gravity="center_horizontal"
+            android:orientation="horizontal">
+
+            <ImageButton
+                android:id="@+id/imgBtnShare"
+                android:layout_width="@dimen/gallery_controll_icon_size"
+                android:layout_height="@dimen/gallery_controll_icon_size"
+                android:background="@color/colorTransparent"
+                android:onClick="onViewClickedEvent"
+                android:scaleType="fitXY"
+                app:srcCompat="@android:drawable/ic_menu_share"/>
+
+            <ImageButton
+                android:id="@+id/imgBtnSavePic"
+                android:layout_width="@dimen/gallery_controll_icon_size"
+                android:layout_height="@dimen/gallery_controll_icon_size"
+                android:layout_marginLeft="@dimen/gallery_control_icon_spacing"
+                android:background="@android:color/transparent"
+                android:onClick="onViewClickedEvent"
+                android:scaleType="fitXY"
+                app:srcCompat="@android:drawable/ic_menu_save"/>
+
+            <ImageButton
+                android:id="@+id/imgMinimize"
+                android:layout_width="@dimen/gallery_controll_icon_size"
+                android:layout_height="@dimen/gallery_controll_icon_size"
+                android:layout_marginLeft="@dimen/gallery_control_icon_spacing"
+                android:background="@drawable/minimize_icon"
+                android:onClick="onViewClickedEvent"
+                android:scaleType="fitXY"
+                />
+
+        </LinearLayout>
+
+    </FrameLayout>
 
 </FrameLayout>
