--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -402,7 +402,9 @@
 
                     </RelativeLayout>
 
-                    <FrameLayout style="@style/profileDividerLine"/>
+                    <FrameLayout
+                        style="@style/profileDividerLine"
+                        />
 
 
                     <RelativeLayout
@@ -434,7 +436,9 @@
 
                     </RelativeLayout>
 
-                    <FrameLayout style="@style/profileDividerLine"/>
+                    <FrameLayout
+                        style="@style/profileDividerLine"
+                        android:visibility="gone"/>
 
                 </LinearLayout>
 
