--- a/app/src/main/res/layout/item_chat_right.xml
+++ b/app/src/main/res/layout/item_chat_right.xml
@@ -9,7 +9,19 @@
         android:layout_alignParentRight="true"
         android:background="@drawable/bubble_out"
         android:orientation="vertical"
-        android:paddingBottom="10dp">
+        android:paddingBottom="5dp"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp">
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="5dp"
+            android:text="You"
+            android:textColor="#FF265B1E"/>
 
         <TextView
             android:id="@+id/txt_msg"
@@ -17,7 +29,7 @@
             android:layout_height="wrap_content"
             android:maxWidth="100dp"
             android:padding="5dp"
-            android:textColor="@android:color/holo_green_dark" />
+            android:textColor="#333333"/>
 
     </LinearLayout>
 
