--- a/app/src/main/res/layout/content_messages.xml
+++ b/app/src/main/res/layout/content_messages.xml
@@ -3,12 +3,15 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical"
-              android:padding="@dimen/activity_horizontal_margin">
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.9">
+        android:layout_weight="0.9"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:paddingTop="70dp">
 
         <ListView
             android:id="@+id/list_msg"
@@ -17,33 +20,43 @@
             android:layout_marginBottom="@dimen/activity_horizontal_margin"
             android:divider="@null"
             android:listSelector="@android:color/transparent"
-            android:transcriptMode="alwaysScroll" />
+            android:transcriptMode="alwaysScroll"/>
 
     </LinearLayout>
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="0.1"
-        android:orientation="horizontal">
+        android:layout_height="50dp"
+        android:layout_marginBottom="5dp"
+        android:paddingBottom="0dp"
+        android:paddingLeft="4dp"
+        android:focusableInTouchMode="true"
+        android:paddingRight="4dp">
 
         <EditText
             android:id="@+id/txtMessage"
-            android:layout_width="0dp"
+            style="@style/mediumTextBox"
             android:layout_height="match_parent"
-            android:layout_weight="0.7"
-            android:background="@color/cardview_light_background"
-            android:hint="Input message"
-            android:paddingLeft="10dp"/>
+            android:layout_centerVertical="true"
+            android:layout_marginRight="6dp"
+            android:layout_marginTop="0dp"
+            android:layout_toLeftOf="@+id/btnSendMessage"
+            android:layout_toStartOf="@+id/btnSendMessage"
+            android:hint="@string/write_a_message"
+            android:paddingLeft="14dp"/>
 
         <Button
             android:id="@+id/btnSendMessage"
-            android:layout_width="0dp"
+            style="@style/mediumButton"
+            android:layout_width="70dp"
             android:layout_height="match_parent"
-            android:layout_weight="0.3"
-            android:background="@color/background_floating_material_dark"
-            android:text="Send"
-            android:textColor="@color/background_material_light"
-            android:onClick="onViewClickedEvent"/>
-    </LinearLayout>
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginEnd="0dp"
+            android:layout_marginRight="9dp"
+            android:layout_marginTop="0dp"
+            android:onClick="onViewClickedEvent"
+            android:text="Send"/>
+
+    </RelativeLayout>
 </LinearLayout>
