--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -68,7 +68,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:background="#222222">
+        android:background="#222222"
+        android:visibility="gone">
 
         <ImageView
             android:id="@+id/imgUserPic"
