--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,4 +22,5 @@
     <color name="testGreentrans">#c28cc1c5</color>
     <color name="test_dark">#003366</color>
     <color name="colorRed">#aa3311</color>
+    <color name="activeService">#333333</color>
 </resources>
