--- a/app/src/main/res/layout/activity_services_list.xml
+++ b/app/src/main/res/layout/activity_services_list.xml
@@ -10,5 +10,7 @@
     <ListView
         android:id="@+id/lstServices"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:divider="@android:color/transparent"
+        android:dividerHeight="5dp"/>
 </FrameLayout>
