--- a/app/src/main/res/menu/dashboard_main_menu.xml
+++ b/app/src/main/res/menu/dashboard_main_menu.xml
@@ -19,7 +19,7 @@
 
     <item
         android:id="@+id/action_search"
-        android:icon="@android:drawable/ic_menu_search"
+        android:icon="@drawable/search_icon"
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="always"/>
