--- a/app/src/main/res/layout/service_item.xml
+++ b/app/src/main/res/layout/service_item.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
               xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:onClick="onViewClickedEvent"
-                android:orientation="horizontal">
-
+              android:layout_height="wrap_content"
+              android:onClick="onViewClickedEvent"
+              android:orientation="horizontal">
+                <!--
+                 android:background="@color/serviceDescriptionBackground"
+                -->
 
     <FrameLayout
         android:id="@+id/imgArrowContainer"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_marginRight="15dp"
         android:background="@color/serviceArrowBackground"
         android:gravity="center"
         android:paddingLeft="10dp"
@@ -20,10 +21,10 @@
 
         <ImageView
             android:id="@+id/imgArrow"
-            android:layout_width="25dp"
-            android:layout_height="wrap_content"
+            android:layout_width="28dp"
+            android:layout_height="25dp"
             android:layout_gravity="center"
-            android:scaleType="fitStart"
+            android:scaleType="fitXY"
             app:srcCompat="@drawable/service_arrow"/>
 
     </FrameLayout>
@@ -33,19 +34,21 @@
         android:layout_height="wrap_content"
         android:layout_toRightOf="@id/imgArrowContainer"
         android:orientation="vertical"
+        android:paddingBottom="2dp"
+        android:paddingLeft="10dp"
         android:paddingRight="15dp"
-        >
+        android:paddingTop="14dp">
 
         <TextView
             android:id="@+id/txtService"
             style="@style/largeLabel"
+            android:layout_marginTop="0dp"
             android:text="Service"/>
 
         <TextView
             android:id="@+id/txtDescription"
             style="@style/mediumLabel"
             android:layout_height="0dp"
-            android:layout_marginBottom="15dp"
             android:text="Service description service description service description  service description  service description service description..."
             android:textColor="#cccccc"
             />
