--- a/app/src/main/res/menu/services_menu.xml
+++ b/app/src/main/res/menu/services_menu.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_fullscreen"
+        android:id="@+id/action_request_service"
         android:icon="@drawable/request_service_icon"
         android:orderInCategory="100"
         android:title="@string/edit"
