--- a/app/src/main/res/menu/diagnostics_menu.xml
+++ b/app/src/main/res/menu/diagnostics_menu.xml
@@ -9,4 +9,11 @@
         android:title="@string/diagnostics"
         app:showAsAction="always"/>
 
+
+    <item
+        android:id="@+id/action_help"
+        android:icon="@drawable/help_icon"
+        android:title="@string/help"
+        app:showAsAction="never"/>
+
 </menu>
