--- a/app/src/main/res/menu/gallery_menu.xml
+++ b/app/src/main/res/menu/gallery_menu.xml
@@ -7,4 +7,12 @@
         android:orderInCategory="100"
         android:title="@string/edit"
         app:showAsAction="always"/>
+
+
+    <item
+        android:id="@+id/action_help"
+        android:icon="@drawable/help_icon"
+        android:title="@string/help"
+        app:showAsAction="never"/>
+
 </menu>
