--- a/app/src/main/res/menu/messages_menu.xml
+++ b/app/src/main/res/menu/messages_menu.xml
@@ -2,10 +2,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto">
 
+
     <item
         android:id="@+id/action_typing"
         android:icon="@drawable/typing_icon"
-        android:orderInCategory="100"
         android:title="user status"
         android:visible="false"
         app:showAsAction="never"/>
@@ -13,22 +13,28 @@
     <item
         android:id="@+id/action_reciepient"
         android:icon="@mipmap/user_icon"
-        android:orderInCategory="100"
-        android:title="@string/edit"
+        android:title="recipient"
         app:showAsAction="always"/>
+
 
     <item
         android:id="@+id/action_block"
         android:icon="@android:drawable/ic_lock_idle_lock"
-        android:orderInCategory="100"
         android:title="@string/block"
         app:showAsAction="never"/>
 
     <item
         android:id="@+id/action_converastions"
         android:icon="@android:drawable/sym_action_chat"
-        android:orderInCategory="100"
         android:title="Change recipient"
         app:showAsAction="never"/>
+
+    <item
+        android:id="@+id/action_help"
+        android:icon="@drawable/help_icon"
+        android:title="@string/help"
+        app:showAsAction="never"/>
+
+
 
 </menu>
