--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -91,6 +91,7 @@
                     android:paddingTop="10dp"
                     android:paddingBottom="10dp"
                     android:paddingLeft="20dp"
+                    android:textAlignment="center"
                     android:onClick="onViewClickedEvent"/>
     </FrameLayout>
 
