--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -32,4 +32,5 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="gallery_controll_icon_size">35dp</dimen>
     <dimen name="gallery_control_icon_spacing">30dp</dimen>
+    <dimen name="text_margin">16dp</dimen>
 </resources>
