Added more dialog title

--- a/app/src/main/res/layout/profile_more_options_layout.xml
+++ b/app/src/main/res/layout/profile_more_options_layout.xml
@@ -1,47 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:app="http://schemas.android.com/apk/res-auto"
               xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:background="@color/cardview_light_background"
-              android:orientation="vertical"
-              android:paddingBottom="30dp"
-              android:paddingLeft="25dp"
-              android:paddingRight="25dp">
+              android:layout_height="match_parent">
 
-    <RelativeLayout
-        android:id="@+id/itemViewCars"
-        style="@style/moreDialogContainer">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="18dp"
+        android:background="@color/cardview_light_background"
+        android:orientation="vertical"
+        android:paddingBottom="30dp"
+        android:paddingLeft="25dp"
+        android:paddingRight="25dp"
+        android:paddingTop="10dp">
 
-        <ImageView android:id="@+id/imgIcon"
-            style="@style/moreDialogIcon"
-            app:srcCompat="@drawable/car_icon_dark"/>
 
-        <TextView
-            style="@style/moreDialogLbalel"
-            android:text="View cars"
-            android:layout_centerVertical="true"
-            android:layout_toRightOf="@+id/imgIcon"
-            android:layout_toEndOf="@+id/imgIcon"/>
+        <RelativeLayout
+            android:id="@+id/itemViewCars"
+            style="@style/moreDialogContainer">
 
-    </RelativeLayout>
+            <ImageView
+                android:id="@+id/imgIcon"
+                style="@style/moreDialogIcon"
+                android:layout_centerVertical="true"
+                app:srcCompat="@drawable/car_icon_dark"/>
 
-    <RelativeLayout
-        android:id="@+id/itemViewMessages"
-        style="@style/moreDialogContainer">
+            <TextView
+                style="@style/moreDialogLbalel"
+                android:layout_centerVertical="true"
+                android:layout_toEndOf="@+id/imgIcon"
+                android:layout_toRightOf="@+id/imgIcon"
+                android:text="View cars"/>
 
-        <ImageView android:id="@+id/imgIcon2"
-            style="@style/moreDialogIcon"
-            app:srcCompat="@drawable/message_icon_dark"/>
+        </RelativeLayout>
 
-        <TextView
-            style="@style/moreDialogLbalel"
-            android:text="View messages"
-            android:layout_centerVertical="true"
-            android:layout_toRightOf="@+id/imgIcon2"
-            android:layout_toEndOf="@+id/imgIcon2"/>
+        <RelativeLayout
+            android:id="@+id/itemViewMessages"
+            style="@style/moreDialogContainer">
 
-    </RelativeLayout>
+            <ImageView
+                android:id="@+id/imgIcon2"
+                style="@style/moreDialogIcon"
+                android:layout_centerVertical="true"
+                app:srcCompat="@drawable/message_icon_dark"/>
 
-</LinearLayout>
+            <TextView
+                style="@style/moreDialogLbalel"
+                android:layout_centerVertical="true"
+                android:layout_toEndOf="@+id/imgIcon2"
+                android:layout_toRightOf="@+id/imgIcon2"
+                android:text="View messages"/>
+
+        </RelativeLayout>
+
+    </LinearLayout>
+</FrameLayout>
